--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,15 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 133px 30px;
+  
 }
 
 h1,
@@ -47,5 +53,160 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 30px;
+  width: 1140px;
+  height: 534px;
+}
+
+.result {
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 16px;
+height: 456px;
+width: 711px;
+}
+
+.result__video-container {
+  width: 100%;
+  height: 100%;
+}
+
+.result__video {
+  object-fit:cover;
+  width: 100%;
+}
+
+.search-form {
+  gap: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.search-form__fieldset
+.search-form__fieldset-title
+.search-form__label
+.search-form__label-text
+.visually-hidden
+.search-form__textfield
+.search-form__checkbox-list
+.search-form__checkbox
+.search-form__pseudo-checkbox
+.button {
+  display: flex;
+width: 194px;
+height: 34px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+}
+
+.search-form__submit-button
+.content__details {
+display: flex;
+  flex-direction: column;
+  gap: 26px; 
+}
+
+.title {
+  color: #fff;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+  /* display: flex; */
+}
+
+.content__accent {
+  color: #545050;
+  font-family: Oswald;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 94%; /* 70.5px */
+  text-transform: uppercase;
+}
+
+.content__list-container {
+  margin-top: 26px;
+  /* display: flex; */
+  /* width: 399px;
+padding: 0px 198px;
+align-items: flex-start; */
+height: 298px; /* или другой фиксированный размер */
+  overflow-y: auto;
+}
+
+.content__list {
+ display: flex;
+flex-direction: column;
+align-items: center;
+gap: 30px;
+align-self: stretch;
+}
+.cards-list-item-template
+.content__list-item {
+display: flex;
+align-items: center;
+align-self: stretch;
+gap: 30px;
+
+}
+
+.content__card-link
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.content__video-card-description-container {
+  display: flex;
+width: 196px;
+height: 103px;
+flex-direction: column;
+align-items: flex-start;
+gap: 6px;
+}
+
+.content__video-card-title {
+align-self: stretch;
+color: #FFF;
+font-family: Oswald;
+font-size: 30px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%; /* 30px */
+text-transform: uppercase;
+}
+
+.content__video-card-description {
+align-self: stretch;
+color: #FFF;
+font-family: "Fira Sans Condensed";
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 16.2px; /* 90% */
+}
+.content__video-card-thumbnail {
+  width: 194px;
+height: 103px;
+}
+      
+.more-button-template
+.button
+
+.error-template {}
