--- a/styles/style.css
+++ b/styles/style.css
@@ -208,24 +208,111 @@ text-overflow: ellipsis;       /* Добавляем "…" в конце */
 } 
 .search-form__checkbox-list {
   display: flex;
+  /* flex-direction: row; */
   gap: 15px;
 }
 /* форма Контейнер пункта выбора */
 .search-form__fieldset {
   border: none;
 }
-
+ 
 /* связывает текст-подпись с полем формы */
 .search-form__label {
 display: flex;
 width: fit-content;
-тут я перестал понимать и устал
+align-items: center;
+justify-content: center;
+/* width: 229px; */
+height: 31px;
+gap: 5px;
+ 
+}
+/* Вроде вводимый текст в форму */
+.search-form__textfield {
+  display: flex;
+  width: 225px;
+  height: 27px;
+  align-items: center;
+  gap: 10px;
+  border: none;
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.70);
+  font-family: "Fira Sans Condensed";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  outline: none;
+  appearance: none;
+}
+.search-form__textfield:focus {
+  outline: none;
 }
 
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid #FFF;
+}
 
-Стилизуем левый input
-Задайте .search-form__label у инпутов для поиска городов и времени суток.
-Расставьте элементы внутри .search-form__label в линию. Примените свойство display: flex;. Также вам пригодится правило width: fit-content;.
+/* поиск -форма __ псевдо - флажок */
+.search-form__pseudo-checkbox {
+  position: relative;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: '';
+  position: absolute;
+  width: 17px; /* На 1px меньше чекбокса */
+  height: 17px; /* На 1px меньше чекбокса */
+  background-color: white;
+}
+.search-form__checkbox-input:checked + .search-form__pseudo-checkbox {
+  border-color: #fff; /* Синяя граница при выборе */
+  background-color: #fff;
+}
+
+.search-form__checkbox-input:checked + .search-form__pseudo-checkbox::after {
+    opacity: 1;
+  transform: scale(1);
+}
+
+/* Скрываем настоящий чекбокс */
+.search-form__checkbox-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+Не работает но что-то
+
+
+Добавьте псевдоэлемент ::after. Белый фон, размер задан, как у чек-бокса. Когда будете стилизовать .search-form__pseudo-checkbox, учитывайте, что в нём появится элемент, который должен оказаться точно по центру. В макете внутренний квадрат включённого чек-бокса на один пиксель меньше самого чекбокса.
+Когда чекбокс активен (псевдокласс :checked) — отобразите внутри псевдоэлемент, который стилизовали в ::after.
+Факультативный шаг. Когда чекбокс в фокусе — добавьте границу вокруг с использованием outline . Если вы применяли псевдокласс :has() для текстового инпута, здесь тоже будет работать это правило. Вам не придётся прописывать отдельно состояние :focus и :focus-visible для чекбокса. Но если вы пошли другим путём, подумайте, как добиться того, чтобы состояние :focus не создавало обводку у родительского элемента, а состояние :focus-visible создавало.
+Декорируйте текст — сделайте так, чтобы при наведении на чекбокс у текста появлялось подчёркивание. Обратите внимание, что оно должно появляться при наведении на любую точку лейбла, а не только на сам текст.
+Шаг 5. Стилизуем кнопки и их состояния
+На странице две кнопки: одна в форме, другая в списке карточек. У них есть общие стили, но у кнопки в списке карточек есть и собственные. Чтобы всё сделать как надо, созданы три класса: .button , .search-form__submit-button и .more-button. Подумайте, какие стили должны быть в каждом из них.
+Сделайте общий класс кнопки. Задайте границу, цвет, шрифт и прозрачный фон.
+Пропишите индивидуальные стили для кнопок «Найти» и «Показать ещё».
+Для кнопки «Найти» задайте положение в конце контейнера и размер.
+Для кнопки «Показать ещё» задайте только размер — так, чтобы она растягивалась на всю ширину контейнера
+Стилизуйте состояние кнопок. У всех кнопок на странице три состояния: :hover, :active, :focus-visible. Состояние :focus должно быть сброшено. Эти правила применяются ко всем кнопкам на странице:
+ 
+1. При наведении — текст подчёркивается.
+2. Активная кнопка — задайте цвет согласно макету.
+3. Для кнопки в фокусе — появляется обводка, заданная через outline.
 
 
 
